fixed layout and spacing at mobile + desktop

--- a/scss/foundation-styles/glyphs.scss
+++ b/scss/foundation-styles/glyphs.scss
@@ -29,6 +29,18 @@
       height: 16px;
     }
   }
+
+  &.x-small {
+    &::before {
+      width: 16px;
+      height: 16px;
+
+      @media screen and (min-width: $bp-md){
+        width: 14px;
+        height: 14px;
+      }
+    }
+  }
 }
 
 .twitter {
